exports[`no-import-test-files > invalid(1): import test from 'node:test';\nimport {type Value} from './example.test.ts'; 1`] = `

  1 | import test from 'node:test';
  2 | import {type Value} from './example.test.ts';

`;

exports[`no-import-test-files > invalid(1): import test from 'node:test';\nimport {type Value} from './example.test.ts'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import {type Value} from './example.test.ts';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(10): import test from 'node:test';\nimport './example_test.js'; 1`] = `

  1 | import test from 'node:test';
  2 | import './example_test.js';

`;

exports[`no-import-test-files > invalid(10): import test from 'node:test';\nimport './example_test.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './example_test.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(11): import test from 'node:test';\nimport './example-test.js'; 1`] = `

  1 | import test from 'node:test';
  2 | import './example-test.js';

`;

exports[`no-import-test-files > invalid(11): import test from 'node:test';\nimport './example-test.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './example-test.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(12): import test from 'node:test';\nimport './test/helpers.js'; 1`] = `

  1 | import test from 'node:test';
  2 | import './test/helpers.js';

`;

exports[`no-import-test-files > invalid(12): import test from 'node:test';\nimport './test/helpers.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './test/helpers.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(13): import test from 'node:test';\nimport './test\\\\helpers.js'; 1`] = `

  1 | import test from 'node:test';
  2 | import './test\\\\helpers.js';

`;

exports[`no-import-test-files > invalid(13): import test from 'node:test';\nimport './test\\\\helpers.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './test\\\\helpers.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(14): import test from 'node:test';\nimport './example\\\\thing.test.js'; 1`] = `

  1 | import test from 'node:test';
  2 | import './example\\\\thing.test.js';

`;

exports[`no-import-test-files > invalid(14): import test from 'node:test';\nimport './example\\\\thing.test.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './example\\\\thing.test.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(15): import test from 'node:test';\nimport './%74est/helpers.js'; 1`] = `

  1 | import test from 'node:test';
  2 | import './%74est/helpers.js';

`;

exports[`no-import-test-files > invalid(15): import test from 'node:test';\nimport './%74est/helpers.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './%74est/helpers.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(16): import test from 'node:test';\nimport './example.%74est.js'; 1`] = `

  1 | import test from 'node:test';
  2 | import './example.%74est.js';

`;

exports[`no-import-test-files > invalid(16): import test from 'node:test';\nimport './example.%74est.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './example.%74est.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(17): import test from 'node:test';\nimport './node_modules/%2e%2e/test/helpers.js'; 1`] = `

  1 | import test from 'node:test';
  2 | import './node_modules/%2e%2e/test/helpers.js';

`;

exports[`no-import-test-files > invalid(17): import test from 'node:test';\nimport './node_modules/%2e%2e/test/helpers.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './node_modules/%2e%2e/test/helpers.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(18): import test from 'node:test';\nimport './test/helpers.js?direct#source'; 1`] = `

  1 | import test from 'node:test';
  2 | import './test/helpers.js?direct#source';

`;

exports[`no-import-test-files > invalid(18): import test from 'node:test';\nimport './test/helpers.js?direct#source'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './test/helpers.js?direct#source';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(19): import test from 'node:test';\nimport './helper.js'; 1`] = `

Filename: test/parent.test.js

  1 | import test from 'node:test';
  2 | import './helper.js';

`;

exports[`no-import-test-files > invalid(19): import test from 'node:test';\nimport './helper.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './helper.js';
    | ^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(2): import test from 'node:test';\nexport {type Value} from './example.test.ts'; 1`] = `

  1 | import test from 'node:test';
  2 | export {type Value} from './example.test.ts';

`;

exports[`no-import-test-files > invalid(2): import test from 'node:test';\nexport {type Value} from './example.test.ts'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | export {type Value} from './example.test.ts';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(20): import test from 'node:test';\nimport '../helper.js'; 1`] = `

Filename: test/nested/parent.test.js

  1 | import test from 'node:test';
  2 | import '../helper.js';

`;

exports[`no-import-test-files > invalid(20): import test from 'node:test';\nimport '../helper.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import '../helper.js';
    | ^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(21): import test from 'node:test';\nimport(\`./example.test.js\`); 1`] = `

  1 | import test from 'node:test';
  2 | import(\`./example.test.js\`);

`;

exports[`no-import-test-files > invalid(21): import test from 'node:test';\nimport(\`./example.test.js\`); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import(\`./example.test.js\`);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(22): import test from 'node:test';\nimport(\`./example_test.js\`); 1`] = `

  1 | import test from 'node:test';
  2 | import(\`./example_test.js\`);

`;

exports[`no-import-test-files > invalid(22): import test from 'node:test';\nimport(\`./example_test.js\`); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import(\`./example_test.js\`);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(23): import test from 'node:test';\nimport(\`./example-test.js\`); 1`] = `

  1 | import test from 'node:test';
  2 | import(\`./example-test.js\`);

`;

exports[`no-import-test-files > invalid(23): import test from 'node:test';\nimport(\`./example-test.js\`); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import(\`./example-test.js\`);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(24): import test from 'node:test';\nexport {value} from './example.test.js'; 1`] = `

  1 | import test from 'node:test';
  2 | export {value} from './example.test.js';

`;

exports[`no-import-test-files > invalid(24): import test from 'node:test';\nexport {value} from './example.test.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | export {value} from './example.test.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(25): import test from 'node:test';\nexport {} from './example.test.js'; 1`] = `

  1 | import test from 'node:test';
  2 | export {} from './example.test.js';

`;

exports[`no-import-test-files > invalid(25): import test from 'node:test';\nexport {} from './example.test.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | export {} from './example.test.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(26): import test from 'node:test';\nexport * from './example.test.js'; 1`] = `

  1 | import test from 'node:test';
  2 | export * from './example.test.js';

`;

exports[`no-import-test-files > invalid(26): import test from 'node:test';\nexport * from './example.test.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | export * from './example.test.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(27): import test from 'node:test';\nimport './example.test.jsx'; 1`] = `

  1 | import test from 'node:test';
  2 | import './example.test.jsx';

`;

exports[`no-import-test-files > invalid(27): import test from 'node:test';\nimport './example.test.jsx'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './example.test.jsx';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(28): import test from 'node:test';\nimport './example.test.ts'; 1`] = `

  1 | import test from 'node:test';
  2 | import './example.test.ts';

`;

exports[`no-import-test-files > invalid(28): import test from 'node:test';\nimport './example.test.ts'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './example.test.ts';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(29): import test from 'node:test';\nimport './example.test.mts'; 1`] = `

  1 | import test from 'node:test';
  2 | import './example.test.mts';

`;

exports[`no-import-test-files > invalid(29): import test from 'node:test';\nimport './example.test.mts'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './example.test.mts';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(3): import test from 'node:test';\nimport {type Helper, value} from './example.test.js'; 1`] = `

  1 | import test from 'node:test';
  2 | import {type Helper, value} from './example.test.js';

`;

exports[`no-import-test-files > invalid(3): import test from 'node:test';\nimport {type Helper, value} from './example.test.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import {type Helper, value} from './example.test.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(30): import test from 'node:test';\nimport './example.test.cts'; 1`] = `

  1 | import test from 'node:test';
  2 | import './example.test.cts';

`;

exports[`no-import-test-files > invalid(30): import test from 'node:test';\nimport './example.test.cts'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './example.test.cts';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(31): import test from 'node:test';\nimport './example.test.tsx'; 1`] = `

  1 | import test from 'node:test';
  2 | import './example.test.tsx';

`;

exports[`no-import-test-files > invalid(31): import test from 'node:test';\nimport './example.test.tsx'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './example.test.tsx';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(32): import test from 'node:test';\nimport('./example.test.js' as string); 1`] = `

  1 | import test from 'node:test';
  2 | import('./example.test.js' as string);

`;

exports[`no-import-test-files > invalid(32): import test from 'node:test';\nimport('./example.test.js' as string); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import('./example.test.js' as string);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(33): import test from 'node:test';\nimport {type Value, value} from './example.test.ts'; 1`] = `

  1 | import test from 'node:test';
  2 | import {type Value, value} from './example.test.ts';

`;

exports[`no-import-test-files > invalid(33): import test from 'node:test';\nimport {type Value, value} from './example.test.ts'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import {type Value, value} from './example.test.ts';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(34): import test from 'node:test';\nexport {type Value, value} from './example.test.ts'; 1`] = `

  1 | import test from 'node:test';
  2 | export {type Value, value} from './example.test.ts';

`;

exports[`no-import-test-files > invalid(34): import test from 'node:test';\nexport {type Value, value} from './example.test.ts'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | export {type Value, value} from './example.test.ts';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(35): import {describe} from 'node:test';\nimport './test/helpers.js'; 1`] = `

  1 | import {describe} from 'node:test';
  2 | import './test/helpers.js';

`;

exports[`no-import-test-files > invalid(35): import {describe} from 'node:test';\nimport './test/helpers.js'; 2`] = `

Message:
  1 | import {describe} from 'node:test';
> 2 | import './test/helpers.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(4): import test from 'node:test';\nexport {type Helper, value} from './example.test.js'; 1`] = `

  1 | import test from 'node:test';
  2 | export {type Helper, value} from './example.test.js';

`;

exports[`no-import-test-files > invalid(4): import test from 'node:test';\nexport {type Helper, value} from './example.test.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | export {type Helper, value} from './example.test.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(5): import test from 'node:test';\nimport '.\\\\test\\\\helpers.js'; 1`] = `

  1 | import test from 'node:test';
  2 | import '.\\\\test\\\\helpers.js';

`;

exports[`no-import-test-files > invalid(5): import test from 'node:test';\nimport '.\\\\test\\\\helpers.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import '.\\\\test\\\\helpers.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(6): import test from 'node:test';\nimport '.\\\\example.test.js'; 1`] = `

  1 | import test from 'node:test';
  2 | import '.\\\\example.test.js';

`;

exports[`no-import-test-files > invalid(6): import test from 'node:test';\nimport '.\\\\example.test.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import '.\\\\example.test.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(7): import test from 'node:test';\nimport './test.js'; 1`] = `

  1 | import test from 'node:test';
  2 | import './test.js';

`;

exports[`no-import-test-files > invalid(7): import test from 'node:test';\nimport './test.js'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './test.js';
    | ^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(8): import test from 'node:test';\nimport './test-example.cjs'; 1`] = `

  1 | import test from 'node:test';
  2 | import './test-example.cjs';

`;

exports[`no-import-test-files > invalid(8): import test from 'node:test';\nimport './test-example.cjs'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './test-example.cjs';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(9): import test from 'node:test';\nimport './example.test.mjs'; 1`] = `

  1 | import test from 'node:test';
  2 | import './example.test.mjs';

`;

exports[`no-import-test-files > invalid(9): import test from 'node:test';\nimport './example.test.mjs'; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | import './example.test.mjs';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;
